--- a/index.html
+++ b/index.html
@@ -370,9 +370,9 @@
                     originalPrice: 700, 
                     description: "L'arsenal complet.", 
                     features: [
-                        "Max 150 Clips Courts", 
-                        "Dont 60 Montages Complexes", 
-                        "Montage Vidéos Longues (Youtube)", 
+                        "150 Clips Courts", 
+                        "60 short Dynamique", 
+                        "4 Vidéos Longues (Youtube)", 
                         "Dév. Software Éphémère", 
                         "Cameraman Sur Site", 
                         "Support IT 24h/24", 
